Changelog
=========

1.3.11 (unreleased)
-------------------

- Fix reordering.
  [cippino, erral]

- Arrow images are now PNG files instead of GIFs.
  [erral]


1.3.10 (2013-10-22)
-------------------

- Added support for ``plone.app.contenttypes``.
  [benniboy, jensens]


1.3.9 (2013-07-01)
------------------

- Fixed html error
  [Andrew Pasquale]

- Removed relatedItems macro. This macro was from the
  plone_deprecated skin folder which is deactivated on plone 4.3 by
  default. relatedItems are now implemented as a viewlet.
  [Victor Fernandez de Alba]

- Conditional zcml configuration update.
  IContainer interface has been moved. The zcml declaration supports
  both locations now.
  [Rodrigo]


1.3.8 (2012-10-31)
------------------

* Moved to github.
  [maurits]

* Added views for plone.app.collection: standard and summary for now.
  [jensens]

* Added try-except block around getting helper
  when reindexing. This is not strictly our issue
  but I still consider it a stability improvement.
  [tmog]

* Remove deprecation warning on Zope 2.13:
  Products.ATReferenceBrowserWidget moved to archetypes.referencebrowserwidget
  DTMLFile is deprecated. import from App.special_dtml instead
  [toutpt]

* Don't add SearchableText to catalog query, if there is none. There has
  been issues with solr integration
  [tom_gross]

* Fall back to Id, if object has no Title in referencebrowser
  [tom_gross]

1.3.7 (2011-11-16)
------------------

* Added conditional include of CMFCore permisssions.zcml for Plone 4.1 support.
  [thet, tom_gross]

* Added addional renderer, which respects effective and expiry-date.
  [tom_gross]

* Restored Topic summary-view for Plone 3
  [tom_gross]

1.3.6 (2011-07-05)
------------------

* Updated set of catch exceptions; location error exception is 2.10+
  only. We fall back to attribute error. Also, narrow list to the
  exceptions likely to be raised because of environment errors.
  [malthe]

1.3.5 (2011-07-04)
------------------
