@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object name="portal_actions">
+ <action-provider name="portal_actions">
+  <action remove="True"
+     title="Back to Collage" action_id="revisitCollage" category="object"
+     condition_expr="object/@@collage_helper/isCollageContent"
+     url_expr="string:${object/@@collage_helper/getCollageObjectURL}/compose"
+     icon_expr="++resource++collage-resources/collage_icon.gif"
+     visible="True">
+   <permission>Modify portal contents</permission>
+  </action>
+ </action-provider>
+ </object>
