@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel">
+ <configlet remove="True"
+    title="Collage" action_id="Collage" appId="Products.Collage"
+    category="Products" condition_expr=""
+    url_expr="string:${portal_url}/@@collage-controlpanel" visible="True">
+  <permission>Manage portal</permission>
+ </configlet>
+</object>
