@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts">
+  <javascript remove="True"
+              cacheable="True" compression="none" cookable="True"
+              enabled="True" id="++resource++collage-resources/collage.js" inline="False"
+              expression="nocall: object/@@collage_view|nothing"
+              />
+</object>
