@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<!-- $Id$ -->
+<object name="portal_properties">
+  <object name="navtree_properties">
+    <property name="metaTypesNotToList" type="lines" purge="False">
+      <element value="CollageRow" remove="True"/>
+      <element value="CollageColumn" remove="True"/>
+      <element value="CollageAlias" remove="True"/>
+    </property>
+  </object>
+  <object name="collage_properties" meta_type="Plone Property Sheet" remove="True">
+  </object>
+</object>
