@@ -4,6 +4,9 @@ Changelog
 1.3.11 (unreleased)
 -------------------
 
+- Add uninstall profile.
+  [thet]
+
 - Fix reordering.
   [cippino, erral]
 
